volexc/tests/ui/service_undefined_response.vol
// Undefined response type in service

message Request {}

service Foo {
    fn bar(Request) -> UndefinedResponse = 1;
}
